# PayWell

./: README.md
paywell/: .env  Cargo.toml  docker-compose.yml
paywell/migrations/: 20250913011019_create_users_table.up.sql  20250913011111_create_transactions_table.down.sql  20250913011111_create_transactions_table.up.sql
paywell/src/: config.rs  db.rs  main.rs  state.rs
paywell/src/models/: models.rs
paywell/src/repo/: transaction_repo.rs
paywell/src/routes/: auth.rs  auth_middleware.rs  mod.rs  payout.rs  resolve_routes.rs  webhook.rs
paywell/src/services/: auth_services.rs  mod.rs  payout_services.rs  webhook_services.rs
paywell/src/utils/: signature.rs
