[package]
name = "paywell"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
rand = "0.8"
argon2 = "0.5"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"

